[project]
name = "ComfyUI_Prompt_List_JSON"
description = "ComfyUI JSON-based prompt management tool."
version = "1.2.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/TKRLAB/ComfyUI_Prompt_List_JSON"

[tool.comfy]
PublisherId = "tkrlab"
DisplayName = "ComfyUI_Prompt_List_JSON"
Icon = ""
